--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,27 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 @tailwind base;
-@tailwind component;
+@tailwind components;
 @tailwind utilities;
+
+* {
+	font-family: "Comfortaa", sans-serif;
+	font-optical-sizing: auto;
+}
+
+
+h1, p, label {
+	color: #555;
+}
+
+h1 { 
+	color: #9AB;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+
+hr {
+	margin: 15px 0;
+}
