--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 
 @tailwind base;
@@ -6,17 +5,18 @@
 @tailwind utilities;
 
 * {
-	font-family: "Comfortaa", sans-serif;
+	font-family: 'Comfortaa', sans-serif;
 	font-optical-sizing: auto;
 }
 
-
-h1, p, label {
+h1,
+p,
+label {
 	color: #555;
 }
 
-h1 { 
-	color: #9AB;
+h1 {
+	color: #9ab;
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 2px;
